--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@paypal/react-paypal-js": "^8.8.2",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "atropos": "^2.0.2",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -24,6 +27,7 @@
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "router": "^1.3.8",
